--- a/menu.html
+++ b/menu.html
@@ -8,16 +8,15 @@
 </head>
 <body>
     <header>
-        <nav>
-            <img src="logo.jpg" alt="logo" width="100px">
-            <a href="#" lang="en">Home</a>
-            <a href="#">Produtos</a>
-            <a href="#">Vender</a>
-            <a href="#">Sobre</a>
+        <nav class="aff">
+            <a class="a1" href="#" lang="en">Home</a>
+            <a class="a1" href="#">Produtos</a>
+            <a class="a1" href="#">Vender</a>
+            <a class="a1" href="#">Sobre</a>
         </nav>
     </header>
     <main>
-        <h1>Bem vindo ao site</h1>
+
 
 
     </main>
