--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <header>
-        <nav class="aff">
+        <div class="barradecima">
+            <div class="logohome">
+                <img class="logo" src="logo.png" alt="croba">
+            </div>
+            <div class="pesquisa">
+                <input type="text" placeholder="Pisquizi">
+            </div>
+        </div>
+        <nav class="barra">
             <a class="a1" href="#" lang="en">Home</a>
             <a class="a1" href="#">Produtos</a>
             <a class="a1" href="#">Vender</a>
@@ -16,13 +24,13 @@
         </nav>
     </header>
     <main>
-
+        <h1>oi </h1>
 
 
     </main>
 
     <footer>
-
+<h1>oi pessoal</h1>
     </footer>
 </body>
 </html>
