--- a/menu.html
+++ b/menu.html
@@ -10,10 +10,13 @@
     <header>
         <div class="barradecima">
             <div class="logohome">
-                <img class="logo" src="logo.png" alt="croba">
+                <img class="logo" src="logotipo.png" alt="croba">
             </div>
             <div class="pesquisa">
-                <input type="text" placeholder="Pisquizi">
+                <input type="search" placeholder="Pesquisar..." class="input-search">
+            </div>
+            <div class="divdobotao">
+                <button class="botaoanuncio">Anunciar</button>
             </div>
         </div>
         <nav class="barra">
@@ -24,11 +27,10 @@
         </nav>
     </header>
     <main>
-        <h1>oi </h1>
+        <h1 style="color: orange;">NÃO ESQUEÇA DE TROCAR AS CORES DO SITE, PARA QUE FIQUE DE ACORDO COM O LARANGA E O PRETO/BRANCO HEHEHE </h1>
 
 
     </main>
-
     <footer>
 <h1>oi pessoal</h1>
     </footer>
