versão 1.8 - footer e reponsividade

--- a/menu.html
+++ b/menu.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>site vendas</title>
 </head>
@@ -27,12 +28,51 @@
         </nav>
     </header>
     <main>
-        <h1 style="color: orange;">NÃO ESQUEÇA DE TROCAR AS CORES DO SITE, PARA QUE FIQUE DE ACORDO COM O LARANGA E O PRETO/BRANCO HEHEHE </h1>
-
-
+        <h1 style="color: orange; text-align: center;" text-align="center">⚠Projeto em desenvolvimento..⚠</h1>
+    
+        </h3>
+<h2></h2>
     </main>
-    <footer>
-<h1>oi pessoal</h1>
-    </footer>
+   <footer>
+   
+    <div id="footer-social-media"></div>
+        <div id="footer-content"></div>
+        <div id="footer-contacts"></div>
+       <a href="https://www.instagram.com/" class="footer-link" id="instagram" style="color: rgb(226, 43, 104);" >
+  <i class="fa-brands fa-instagram"></i>
+</a>
+
+<a href="https://www.youtube.com/" class="footer-link" id="tiktok" style="color: rgb(236, 217, 217);" >
+  <i class="fa-brands fa-tiktok"></i>
+</a>
+<a href="https://www.kwai.com/" class="footer-link" id="kwai" style="color: rgb(236, 217, 217);">
+  <img src="https://static-00.iconduck.com/assets.00/kwai-icon-2048x2048-ja4k8ib9.png" 
+       alt="Kwai" 
+       style="height: 20px; vertical-align: middle;">
+</a>
+
+</a>
+<a href="https://discord.com/" class="footer-link" id="telegram" style="color: rgb(16, 167, 197);" >
+  <i class="fa-brands fa-telegram"></i>
+  <a href="https://discord.com/" class="footer-link" id="whastapp" style="color: rgb(56, 174, 23);" >
+  <i class="fa-brands fa-whatsapp"></i>
+</a>
+<ul>
+    <li>
+        
+   
+   
+    </li>
+     <div class="footer-section">Redes Sociais</div>
+    <li>
+         <div class="footer-section">Contato: contato@meusite.com</div>
+    </li>
+    <li>
+ <div class="footer-section">© 2025 COPYRIGHT BY VICKM </div>
+
+    </li>
+</ul>
+    </div>
+  </footer>
 </body>
 </html>
