versão 2.0 - Design - Parte Login

--- a/sobre.html
+++ b/sobre.html
@@ -17,49 +17,51 @@
             <div class="pesquisa">
                 <input type="search" placeholder="Pesquisar..." class="input-search">
             </div>
-            <!-- <div class="divdobotao">
-                <button class="botaoanuncio">Anunciar</button>
-            </div> -->
+            <div class="divdobotao">
+                <button class="botaoanuncio">Conta</button>
+            </div>
         </div>
         <nav class="navegacao">
             <a class="a1" href="home.html" lang="en">Home</a>
             <a class="a1" href="#">Produtos</a>
             <a class="a1" href="#">Vender</a>
-            <a class="a1" href="sobre.html">Sobre</a>
         </nav>
 </header>
 
 <main>
-    <div class="fundo2"></div>
 
-    <h1>Sobre? Sobremesa hahahahaha</h1>
+Sobre? sobremesa hahahahaha
 
 </main>
 
 <footer>
-    <div id="footer-social-media">
-        <a href="https://www.instagram.com/" class="footer-link" style="color: rgb(226, 43, 104);">
-            <i class="fa-brands fa-instagram"></i>
-        </a>
-        <a href="https://www.tiktok.com/" class="footer-link" style="color: rgb(236, 217, 217);">
-            <i class="fa-brands fa-tiktok"></i>
-        </a>
-        <a href="https://www.kwai.com/" class="footer-link">
-            <img src="https://static-00.iconduck.com/assets.00/kwai-icon-2048x2048-ja4k8ib9.png" alt="Kwai" style="height: 20px;">
-        </a>
-         <a href="https://t.me/seuTelegram" class="footer-link" style="color: rgb(16, 167, 197);">
-            <i class="fa-brands fa-telegram"></i>
-        </a>
-        <a href="https://wa.me/seuNumero" class="footer-link" style="color: rgb(56, 174, 23);">
-            <i class="fa-brands fa-whatsapp"></i>
-        </a>
-  </div>
 
-  <div id="footer-content">
-    <div class="footer-section">Redes Sociais</div>
-    <div class="footer-section">Contato: contato@meusite.com</div>
-    <div class="footer-section">© 2025 COPYRIGHT BY VICKM</div>
-  </div>
+<div class="textoinfor">
+    <div>Redes Sociais</div>
+    <div>&copy; 2025 COPYRIGHT BY VICKM</div>
+    <div>Sobre</div>
+</div>
+    <div class="trecos">
+        <div class="redessociais">
+            <a href="https://www.instagram.com/" class="footer-link" style="color: rgb(226, 43, 104);">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://www.tiktok.com/" class="footer-link" style="color: rgb(236, 217, 217);">
+                <i class="fa-brands fa-tiktok"></i>
+            </a>
+            <a href="https://www.kwai.com/" class="footer-link">
+                <img src="https://static-00.iconduck.com/assets.00/kwai-icon-2048x2048-ja4k8ib9.png" alt="Kwai" style="width: 20px;">
+            </a>
+            <a href="https://t.me/seuTelegram" class="footer-link" style="color: rgb(16, 167, 197);">
+                <i class="fa-brands fa-telegram"></i>
+            </a>
+            <a href="https://wa.me/seuNumero" class="footer-link" style="color: rgb(56, 174, 23);">
+                <i class="fa-brands fa-whatsapp"></i>
+            </a>
+        </div>
+        <div class="contato">Contato: contato@meusite.com</div>
+        <a class="linksobre" href="sobre.html">Saiba mais</a>
+</div>
 
 </footer>
 </body>
