versão 2.2 - sobre página

--- a/home.html
+++ b/home.html
@@ -17,6 +17,9 @@
             <div class="pesquisa">
                 <input type="search" placeholder="Pesquisar..." class="input-search">
             </div>
+            <div class="divdobotaosugerir">
+                <button class="botaosugerir">Sugerir Produto</button>
+            </div>
             <div class="divdobotao">
                 <button class="botaoanuncio">Conta</button>
             </div>
@@ -24,7 +27,6 @@
         <nav class="navegacao">
             <a class="a1" href="home.html" lang="en">Home</a>
             <a class="a1" href="#">Produtos</a>
-            <a class="a1" href="#">Vender</a>
         </nav>
 </header>
 
