--- a/sobre.html
+++ b/sobre.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="sobre.css">
     <title>site vendas</title>
 </head>
 <body>
@@ -22,9 +22,11 @@
             </div>
         </div>
         <nav class="navegacao">
-            <a class="a1" href="home.html" lang="en">Home</a>
-            <a class="a1" href="#">Produtos</a>
-            <a class="a1" href="#">Vender</a>
+            <div class="divdobotaovoltar">
+                <button style="">
+            <a class="botaovoltar" href="home.html" lang="en">Voltar</a>
+                </button>
+            </div>
         </nav>
 </header>
 
