versão 2.2 - JS botão login/saber mais

--- a/sobre.html
+++ b/sobre.html
@@ -14,25 +14,51 @@
             <div class="logohome">
                 <img class="logo" src="logotipo.png" alt="croba">
             </div>
-            <div class="pesquisa">
-                <input type="search" placeholder="Pesquisar..." class="input-search">
-            </div>
-            <div class="divdobotao">
-                <button class="botaoanuncio">Conta</button>
+            <div class="divdobotaoconta">
+                <button class="botaoconta">Conta</button>
             </div>
         </div>
         <nav class="navegacao">
-            <div class="divdobotaovoltar">
-                <button style="">
-            <a class="botaovoltar" href="home.html" lang="en">Voltar</a>
-                </button>
-            </div>
+            <a class="a1" href="home.html" lang="en">Home</a>
+            <a class="a1" href="produtos.html">Produtos</a>
         </nav>
 </header>
 
 <main>
 
-Sobre? sobremesa hahahahaha
+<br><br>
+    <h1>ESSE SITE É MUITO LEGAL SOBRE!</h1>
+
+    <!--I: parte do login-->
+    <!-- <div class="contentlogin">
+        <div class="login">
+                <h1 class="nometexto">NOME</h1>
+                <input class="inputlogin" type="text">
+                <h1 class="idadetexto">IDADE</h1>
+                <input class="inputlogin" type="date" name="" id="">
+                <h1 class="emailtexto">EMAIL</h1>
+                <input class="inputlogin" type="email">
+                <button class="confirmar">ENVIAR</button>
+        </div>
+    </div> -->
+
+    <!-- I: Parte da sugestão -->
+    <!-- <div class="contentsugestao">
+        <div class="sugestao">
+                <h1 style="text-align: center;">Susgestão</h1>
+            <div class="textossugestao">
+                <h2 class="produtotexto">Produto</h1>
+                    <input class="inputproduto" type="search" placeholder="Digite...">
+                <h2 class="marcatexto">Marca</h1>
+                    <input class="inputproduto" type="search" name="" id="" placeholder="Digite...">
+                <h2 class="relevancia">Tipo</h1>
+                    <input class="inputproduto" type="search" placeholder="Digite...">
+            </div>
+            <div class="botaosugestao">
+                <button class="confirmarsugestao">ENVIAR</button>
+            </div>
+        </div>
+    </div> -->
 
 </main>
 
@@ -40,10 +66,9 @@ Sobre? sobremesa hahahahaha
 
 <div class="textoinfor">
     <div>Redes Sociais</div>
-    <div>&copy; 2025 COPYRIGHT BY VICKM</div>
-    <div>Sobre</div>
+    <a class="linksobre" href="sobre.html">Saiba mais</a>
 </div>
-    <div class="trecos">
+    <div class="logos">
         <div class="redessociais">
             <a href="https://www.instagram.com/" class="footer-link" style="color: rgb(226, 43, 104);">
                 <i class="fa-brands fa-instagram"></i>
@@ -61,8 +86,7 @@ Sobre? sobremesa hahahahaha
                 <i class="fa-brands fa-whatsapp"></i>
             </a>
         </div>
-        <div class="contato">Contato: contato@meusite.com</div>
-        <a class="linksobre" href="sobre.html">Saiba mais</a>
+        <div class="contato">Contato: <a class="contatoemail" href="mailto:vyrexisltda@gmail.com">vyrexisltda@gmail.com</a></div>
 </div>
 
 </footer>
