--- a/produtos.html
+++ b/produtos.html
@@ -21,8 +21,8 @@
             <div class="divdobotaosugerir">
                 <button class="botaosugerir">Sugerir Produto</button>
             </div>
-            <div class="divdobotao">
-                <button class="botaoanuncio" onclick="abrirLogin()">Conta</button>
+            <div class="divdobotaocarrinho">
+                <button class="botaocarrinho" onclick="abrirLogin()">Carrinho</button>
             </div>
         </div>
         <nav class="navegacao">
@@ -211,7 +211,7 @@
 
 
     <!-- I: parte do login-->
-    <div class="contentlogin">
+    <!-- <div class="contentlogin">
         <div class="login">
                 <h1 class="nometexto">NOME</h1>
                 <input class="inputlogin" type="text" id="nome">
@@ -221,25 +221,18 @@
                 <input class="inputlogin" type="email" id="email">
                 <button class="confirmar" onclick="enviarDados()">ENVIAR</button>
         </div>
-    </div>
+    </div> -->
 
     <!-- I: Parte da sugestão -->
-    <!-- <div class="contentsugestao">
+    <div class="contentsugestao" id="formSugestao">
         <div class="sugestao">
-                <h1 style="text-align: center;">Susgestão</h1>
-            <div class="textossugestao">
-                <h2 class="produtotexto">Produto</h1>
-                    <input class="inputproduto" type="search" placeholder="Digite...">
-                <h2 class="marcatexto">Marca</h1>
-                    <input class="inputproduto" type="search" name="" id="" placeholder="Digite...">
-                <h2 class="relevancia">Tipo</h1>
-                    <input class="inputproduto" type="search" placeholder="Digite...">
-            </div>
-            <div class="botaosugestao">
-                <button class="confirmarsugestao">ENVIAR</button>
-            </div>
+            <div class="divfecharsugestao"> <a class="fecharsugestao" href="produtos.html">Fechar</a></div>
+            <h1 style="text-align: center;">ATENÇÃO</h1>
+            <br>
+            <h2 style="text-align: justify;">Para sugerir seu produto, você será redirecionado para um formulário. Para preencher o formulário, clique no botão abaixo:</h2>
+            <h1><div class="textoemailsugestao"> <a class="linkemailsugestao" href="https://forms.gle/bXuqq7zGJPM3vEVN8">SUGERIR PRODUTO</a></div></h1>
         </div>
-    </div> -->
+    </div>
 
 </main>
 
@@ -257,8 +250,6 @@
             <a href="https://www.tiktok.com/" class="footer-link" style="color: rgb(236, 217, 217);">
                 <i class="fa-brands fa-tiktok"></i>
             </a>
-            <a href="https://www.kwai.com/" class="footer-link">
-                <img src="https://static-00.iconduck.com/assets.00/kwai-icon-2048x2048-ja4k8ib9.png" alt="Kwai" style="width: 20px;">
             </a>
             <a href="https://t.me/seuTelegram" class="footer-link" style="color: rgb(16, 167, 197);">
                 <i class="fa-brands fa-telegram"></i>
