--- a/sobre.html
+++ b/sobre.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="sobre.css">
+    <script src="func.js"></script>
     <title>site vendas</title>
 </head>
 <body>
@@ -12,53 +13,27 @@
     <header>
         <div class="cabecario">
             <div class="logohome">
-                <img class="logo" src="logotipo.png" alt="croba">
-            </div>
-            <div class="divdobotaoconta">
-                <button class="botaoconta">Conta</button>
+                <img class="logo" src="logotipo.png" alt="logo do site">
             </div>
         </div>
         <nav class="navegacao">
             <a class="a1" href="home.html" lang="en">Home</a>
             <a class="a1" href="produtos.html">Produtos</a>
         </nav>
-</header>
+    </header>
 
 <main>
+    
+    <section class="sobre-nos">
+        <h1>Sobre a Vyrexis</h1>
+        <p>A Vyrexis nasceu da vontade de criar um espaço onde segurança, rapidez e autenticidade se encontram. Nossa missão é oferecer produtos variados e únicos e um toque pessoal, promovendo uma experiência de compra única para cada cliente.</p>
+        <img src="logotipo.png" alt="Nossa equipe" class="img-sobre">
+    </section>
 
-<br><br>
-    <h1>ESSE SITE É MUITO LEGAL SOBRE!</h1>
-
-    <!--I: parte do login-->
-    <!-- <div class="contentlogin">
-        <div class="login">
-                <h1 class="nometexto">NOME</h1>
-                <input class="inputlogin" type="text">
-                <h1 class="idadetexto">IDADE</h1>
-                <input class="inputlogin" type="date" name="" id="">
-                <h1 class="emailtexto">EMAIL</h1>
-                <input class="inputlogin" type="email">
-                <button class="confirmar">ENVIAR</button>
-        </div>
-    </div> -->
-
-    <!-- I: Parte da sugestão -->
-    <!-- <div class="contentsugestao">
-        <div class="sugestao">
-                <h1 style="text-align: center;">Susgestão</h1>
-            <div class="textossugestao">
-                <h2 class="produtotexto">Produto</h1>
-                    <input class="inputproduto" type="search" placeholder="Digite...">
-                <h2 class="marcatexto">Marca</h1>
-                    <input class="inputproduto" type="search" name="" id="" placeholder="Digite...">
-                <h2 class="relevancia">Tipo</h1>
-                    <input class="inputproduto" type="search" placeholder="Digite...">
-            </div>
-            <div class="botaosugestao">
-                <button class="confirmarsugestao">ENVIAR</button>
-            </div>
-        </div>
-    </div> -->
+    <section class="valores">
+        <h2>Nossos Valores</h2>
+        <p>Trabalhamos com compromisso, empatia e paixão. Cada item vendido é pensado com carinho para trazer conforto na sua compra.</p>
+    </section>
 
 </main>
 
@@ -76,8 +51,6 @@
             <a href="https://www.tiktok.com/" class="footer-link" style="color: rgb(236, 217, 217);">
                 <i class="fa-brands fa-tiktok"></i>
             </a>
-            <a href="https://www.kwai.com/" class="footer-link">
-                <img src="https://static-00.iconduck.com/assets.00/kwai-icon-2048x2048-ja4k8ib9.png" alt="Kwai" style="width: 20px;">
             </a>
             <a href="https://t.me/seuTelegram" class="footer-link" style="color: rgb(16, 167, 197);">
                 <i class="fa-brands fa-telegram"></i>
