--- a/produtos.html
+++ b/produtos.html
@@ -40,10 +40,25 @@
             </div>
                 <div class="cardstext">
                     <p class="cardtitulo">Xiaomi Mi True Wireless Earbuds Fones de Ouvido</p>
-                    <p class="cardpreco"> R&#36;25,00</p>
+                    <p class="cardpreco"> R&#36;28,00</p>
                     <p class="carddescricao">- Marca: Xiaomi <br> - Modelo: Earbuds <br> - Tipo: Sem fio (Bluetooth) <br> - Design: Compacto e ergonômico<br> - Qualidade de Áudio: Alta Qualidade</p>
                     <div class="divbotaosaber">    
-                        <a class="comprar" href="https://wa.me/5585989049798?text=Tenho%20interesse%20no%20Produto%3A%20%22Fone%20De%20Ouvido%20In-ear%20Gamer%20Sem%20Fio%20Xiaomi%20Mi%20True%20Wireless%20Earbuds%20Basic%202s%20Twsej07ls%20Preto%22">Comprar</a>
+                        <a class="comprar" href="https://wa.me/5585989049798?text=Ol%C3%A1%21%20Tenho%20interesse%20no%20Produto%3A%20Xiaomi%20Mi%20True%20Wireless%20Earbuds%20Fones%20de%20Ouvido">Comprar</a>
+                        <button class="sabermais" onclick="crescercard(this)">Mais</button>
+                    </div>
+                </div>
+        </div>
+
+        <div class="card">
+            <div class="cardimagem">
+                <img src="Fone de Ouvido Havit Gamenote H2232d RGB Preto.jpg" alt="forne">
+            </div>
+                <div class="cardstext">
+                    <p class="cardtitulo">Havit Gamenote H2232d RGB Preto Fone de Ouvido</p>
+                    <p class="cardpreco"> R&#36;95,00</p>
+                    <p class="carddescricao">- Marca: Havit <br>- Modelo: Headset <br>- Tipo: Com fio <br>- Design: Compacto e ergonômico <br>- Qualidade de Áudio: Alta Qualidade</p>
+                    <div class="divbotaosaber">    
+                        <a class="comprar" href="https://wa.me/5585989049798?text=Ol%C3%A1%21%20Tenho%20interesse%20no%20Produto%3A%20Havit%20Gamenote%20H2232d%20RGB%20Preto">Comprar</a>
                         <button class="sabermais" onclick="crescercard(this)">Mais</button>
                     </div>
                 </div>
@@ -88,17 +103,17 @@
 </div>
     <div class="logos">
         <div class="redessociais">
-            <a href="https://www.instagram.com/" class="footer-link" style="color: rgb(226, 43, 104);">
+            <a href="https://www.instagram.com/vyrexis.store/" class="footer-link" style="color: rgb(226, 43, 104);">
                 <i class="fa-brands fa-instagram"></i>
             </a>
-            <a href="https://www.tiktok.com/" class="footer-link" style="color: rgb(236, 217, 217);">
+            <a href="https://www.tiktok.com/@vyrexisstore" class="footer-link" style="color: rgb(236, 217, 217);">
                 <i class="fa-brands fa-tiktok"></i>
             </a>
             </a>
-            <a href="https://t.me/seuTelegram" class="footer-link" style="color: rgb(16, 167, 197);">
+            <a href="https://t.me/+WlpzVnrU9hxkNzcx" class="footer-link" style="color: rgb(16, 167, 197);">
                 <i class="fa-brands fa-telegram"></i>
             </a>
-            <a href="https://wa.me/seuNumero" class="footer-link" style="color: rgb(56, 174, 23);">
+            <a href="https://whatsapp.com/channel/0029VayXBqOL2AU4XXZ7MQ2B" class="footer-link" style="color: rgb(56, 174, 23);">
                 <i class="fa-brands fa-whatsapp"></i>
             </a>
         </div>
