--- a/produtos.html
+++ b/produtos.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <nav class="navegacao">
-            <a class="a1" href="home.html" lang="en">Home</a>
+            <a class="a1" href="index.html" lang="en">Home</a>
             <a class="a1" href="produtos.html" style="color: rgb(236, 198, 128)">Produtos</a>
         </nav>
     </header>
