--- a/sobre.html
+++ b/sobre.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <nav class="navegacao">
-            <a class="a1" href="home.html" lang="en">Home</a>
+            <a class="a1" href="index.html" lang="en">Home</a>
             <a class="a1" href="produtos.html">Produtos</a>
         </nav>
     </header>
