--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <nav class="navegacao">
-            <a class="a1" style="color: rgb(236, 198, 128);" href="home.html" lang="en">Home</a>
+            <a class="a1" style="color: rgb(236, 198, 128);" href="index.html" lang="en">Home</a>
             <a class="a1" href="produtos.html">Produtos</a>
         </nav>
     </header>
