--- a/produtos.html
+++ b/produtos.html
@@ -79,6 +79,21 @@
                 </div>
         </div>
 
+        <div class="card">
+            <div class="cardimagem">
+                <img src="JBL - Fone Reforçado de Ouvido Com Fio.jpg" alt="forne">
+            </div>
+                <div class="cardstext">
+                    <p class="cardtitulo">JBL - Fone Reforçado de Ouvido Com Fio</p>
+                    <p class="cardpreco"> R&#36;25,00</p>
+                    <p class="carddescricao">- Marca: JBL <br> - Modelo: Hands Free <br> - Tipo: Com Fio + Intra Auricular <br> - Design: Compacto e ergonômico <br> - Qualidade de Áudio: Alta Qualidade</p>
+                    <div class="divbotaosaber">    
+                        <a class="comprar" href="https://wa.me/5585989049798?text=Ol%C3%A1!%20Tenho%20interesse%20no%20Produto%20%22JBL%20-%20Fone%20Refor%C3%A7ado%20de%20Ouvido%20Com%20Fio%22">Comprar</a>
+                        <button class="sabermais" onclick="crescercard(this)">Mais</button>
+                    </div>
+                </div>
+        </div>
+
     </div>
 
 
