Removi algumas classes, adicionando botão na parte do home e produtos, adicionando classes no produtos.css e removendo ou trocando no style.css

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <script src="func.js"></script>
-    <title>site vendas</title>
+    <title>Vyrexis Store</title>
 </head>
 <body>
     <div class="fundo"></div>
-    <header>
+<header>
         <div class="cabecario">
             <div class="logohome">
                 <img class="logo" src="logotipo.png" alt="logo do site">
             </div>
         </div>
-        <nav class="navegacao">
-            <a class="a1" style="color: rgb(236, 198, 128);" href="index.html" lang="en">Home</a>
-            <a class="a1" href="produtos.html">Produtos</a>
-        </nav>
+            <div class="divdosbotoes">
+                <a class="botoes" style="color: rgb(236, 198, 128);" href="index.html" lang="en">Home</a>
+                <a class="botoes" href="produtos.html">Produtos</a>
+            </div>
     </header>
 
 <main>
