--- a/produtos.html
+++ b/produtos.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="produto.css">
     <script src="func.js"></script>
-    <title>site vendas</title>
+    <title>Vyrexis Store</title>
 </head>
 <body>
     <div class="fundo"></div>
@@ -22,10 +22,10 @@
                 <button class="botaosugerir">Sugerir Produto</button>
             </div>
         </div>
-        <nav class="navegacao">
-            <a class="a1" href="index.html" lang="en">Home</a>
-            <a class="a1" href="produtos.html" style="color: rgb(236, 198, 128)">Produtos</a>
-        </nav>
+        <div class="divdosbotoes">
+            <a class="botoes" href="index.html" lang="en">Home</a>
+            <a class="botoes" href="produtos.html" style="color: rgb(236, 198, 128)">Produtos</a>
+        </div>
     </header>
 
 <main>
