Versão de teste otimizada para Celulares

--- a/index.html
+++ b/index.html
@@ -26,17 +26,19 @@
     
     <section class="destaque">
         <h1>Bem-vindo à Vyrexis</h1>
-        <p>Tornando a procura por produtos tech segura e rápida! Descubra produtos únicos e modernos criados com personalidade.</p>
+        <p>"Tecnologia útil e acessível no seu dia a dia"</p>
         <img src="logotipo.png" alt="Imagem de destaque da loja" class="img-destaque">
     </section>
 
     <section class="info">
-        <h2>Por que comprar com a gente?</h2>
-        <ul>
-            <li>Produtos exclusivos e autorais</li>
-            <li>Atendimento direto e humano</li>
-            <li>Entrega rápida e segura</li>
-        </ul>
+        <h2>QUEM SOMOS?</h2>
+        <p>A Vyrexis é a sua nova parceira no mundo da tecnologia. Aqui você encontra os melhores preços, com ofertas reais, produtos de qualidade e aquele precinho que cabe no seu bolso.</p>
+        <br>
+        <h2>NOSSA HISTÓRIA</h2>
+        <p>Fundada em 2025, a partir de um projeto de Programação Web, a Vyrexis foi criada com o objetivo de ser uma forma fácil e confiável de players comprarem seus acessórios e produtos, feito por um gamer para gamers.</p>
+        <br>
+        <h2>NOSSOS OBJETIVOS</h2>
+        <p>Nosso objetivo é ser referência em qualidade e atendimento, promovendo uma experiência de compra diferenciada e responsável. Buscamos sempre inovar, ampliar nosso portfólio e fortalecer a confiança dos nossos clientes.</p>
     </section>
 
 </main>
