--- a/produtos.html
+++ b/produtos.html
@@ -19,7 +19,7 @@
                 <input id="pesquisa" type="text" placeholder="Pesquisar..." class="input-search">
             </div>
             <div class="divdobotaosugerir">
-                <button class="botaosugerir">Sugerir Produto</button>
+                <button class="botaosugerir">Indique um Produto</button>
             </div>
         </div>
         <div class="divdosbotoes">
@@ -81,10 +81,10 @@
 
         <div class="card">
             <div class="cardimagem">
-                <img src="JBL - Fone Reforçado de Ouvido Com Fio.jpg" alt="forne">
+                <img src="JBL - Fone de Ouvido Com Fio Reforçado.png" alt="forne">
             </div>
                 <div class="cardstext">
-                    <p class="cardtitulo">JBL - Fone Reforçado de Ouvido Com Fio</p>
+                    <p class="cardtitulo">JBL - Fone de Ouvido Com Fio Reforçado</p>
                     <p class="cardpreco"> R&#36;25,00</p>
                     <p class="carddescricao">- Marca: JBL <br> - Modelo: Hands Free <br> - Tipo: Com Fio + Intra Auricular <br> - Design: Compacto e ergonômico <br> - Qualidade de Áudio: Alta Qualidade</p>
                     <div class="divbotaosaber">    
