ulalau, atualização nova

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </div>
         </div>
             <div class="divdosbotoes">
-                <a class="botoes" style="color: rgb(236, 198, 128);" href="index.html" lang="en">Home</a>
-                <a class="botoes" href="produtos.html">Produtos</a>
+                <a class="a1" style="color: rgb(236, 198, 128);" href="index.html" lang="en">Home</a>
+                <a class="a1" href="produtos.html">Produtos</a>
             </div>
     </header>
 
