--- a/produtos.html
+++ b/produtos.html
@@ -23,8 +23,8 @@
             </div>
         </div>
         <div class="divdosbotoes">
-            <a class="botoes" href="index.html" lang="en">Home</a>
-            <a class="botoes" href="produtos.html" style="color: rgb(236, 198, 128)">Produtos</a>
+            <a class="a1" href="index.html" lang="en">Home</a>
+            <a class="a1" href="produtos.html" style="color: rgb(236, 198, 128)">Produtos</a>
         </div>
     </header>
 
