--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <script src="func.js"></script>
-    <title>Vyrexis Store</title>
+    <title>Vyrexis - Home</title>
+    <link rel="shortcut icon" href="IconeVyrexisSemFundo.ico" type="image/x-icon">
 </head>
 <body>
     <div class="fundo"></div>
