Adição de novos produtos e remoção de produtos inexistentes.

--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
     <div>Redes Sociais</div>
     <a class="linksobre" href="sobre.html">Saiba mais</a>
 </div>
-    <div class="logos">
+     <div class="logos">
         <div class="redessociais">
-            <a href="https://www.instagram.com/" class="footer-link" style="color: rgb(226, 43, 104);">
+            <a href="https://www.instagram.com/vyrexis.store/" class="footer-link" target="_blank" rel="noopener" color: rgb(226, 43, 104);">
                 <i class="fa-brands fa-instagram"></i>
             </a>
-            <a href="https://www.tiktok.com/" class="footer-link" style="color: rgb(236, 217, 217);">
+            <a href="https://www.tiktok.com/@vyrexisstore" class="footer-link" target="_blank" rel="noopener" style="color: rgb(236, 217, 217);">
                 <i class="fa-brands fa-tiktok"></i>
             </a>
             </a>
-            <a href="https://t.me/seuTelegram" class="footer-link" style="color: rgb(16, 167, 197);">
+            <a href="https://t.me/+WlpzVnrU9hxkNzcx" class="footer-link" target="_blank" rel="noopener" style="color: rgb(16, 167, 197);">
                 <i class="fa-brands fa-telegram"></i>
             </a>
-            <a href="https://wa.me/seuNumero" class="footer-link" style="color: rgb(56, 174, 23);">
+            <a href="https://whatsapp.com/channel/0029VayXBqOL2AU4XXZ7MQ2B" class="footer-link" target="_blank" rel="noopener" style="color: rgb(56, 174, 23);">
                 <i class="fa-brands fa-whatsapp"></i>
             </a>
         </div>
