--- a/produtos.html
+++ b/produtos.html
@@ -37,44 +37,14 @@
 
         <div class="card">
             <div class="cardimagem">
-                <img src="Fone-De-Ouvido-In-ear-Gamer-Sem-Fio-Xiaomi-Mi-True-Wireless-Earbuds-Basic-2s-Twsej07ls-Preto.jpg" alt="forne">
+                <img src="HEADSETGAMERRGBCOMMICROFONECOMFIO.png" alt="forne">
             </div>
                 <div class="cardstext">
-                    <p class="cardtitulo">Xiaomi Mi True Wireless Earbuds Fones de Ouvido</p>
-                    <p class="cardpreco"> R&#36;28,00</p>
-                    <p class="carddescricao">- Marca: Xiaomi <br> - Modelo: Earbuds <br> - Tipo: Sem fio (Bluetooth) <br> - Design: Compacto e ergonômico<br> - Qualidade de Áudio: Alta Qualidade</p>
+                    <p class="cardtitulo">Headset Gamer RGB Com Fio</p>
+                    <p class="cardpreco"> R&#36;70,00</p>
+                    <p class="carddescricao">Headset Gamer RGB com microfone, som potente e iluminação estilosa. Conexão USB e P2, ideal para PC, consoles e celular. Conforto e qualidade para suas partidas!</p>
                     <div class="divbotaosaber">    
-                        <a class="comprar" href="https://wa.me/5585989049798?text=Ol%C3%A1%21%20Tenho%20interesse%20no%20Produto%3A%20Xiaomi%20Mi%20True%20Wireless%20Earbuds%20Fones%20de%20Ouvido">Comprar</a>
-                        <button class="sabermais" onclick="crescercard(this)">Mais</button>
-                    </div>
-                </div>
-        </div>
-
-        <div class="card">
-            <div class="cardimagem">
-                <img src="Fone de Ouvido Havit Gamenote H2232d RGB Preto.jpg" alt="forne">
-            </div>
-                <div class="cardstext">
-                    <p class="cardtitulo">Havit Gamenote H2232d RGB Preto Fone de Ouvido</p>
-                    <p class="cardpreco"> R&#36;95,00</p>
-                    <p class="carddescricao">- Marca: Havit <br>- Modelo: Headset <br>- Tipo: Com fio <br>- Design: Compacto e ergonômico <br>- Qualidade de Áudio: Alta Qualidade</p>
-                    <div class="divbotaosaber">    
-                        <a class="comprar" href="https://wa.me/5585989049798?text=Ol%C3%A1%21%20Tenho%20interesse%20no%20Produto%3A%20Havit%20Gamenote%20H2232d%20RGB%20Preto">Comprar</a>
-                        <button class="sabermais" onclick="crescercard(this)">Mais</button>
-                    </div>
-                </div>
-        </div>
-
-        <div class="card">
-            <div class="cardimagem">
-                <img src="Fone-De-Ouvido-In-ear-Gamer-Sem-Fio-Xiaomi-Mi-True-Wireless-Earbuds-Basic-2s-Twsej07ls-Preto.jpg" alt="forne">
-            </div>
-                <div class="cardstext">
-                    <p class="cardtitulo">Xiaomi Mi True Wireless Earbuds Fones de Ouvido</p>
-                    <p class="cardpreco"> R&#36;25,00</p>
-                    <p class="carddescricao">- Marca: Xiaomi <br> - Modelo: Earbuds <br> - Tipo: Sem fio (Bluetooth) <br> - Design: Compacto e ergonômico<br> - Qualidade de Áudio: Alta Qualidade</p>
-                    <div class="divbotaosaber">    
-                        <a class="comprar" href="https://wa.me/5585989049798?text=Tenho%20interesse%20no%20Produto%3A%20%22Fone%20De%20Ouvido%20In-ear%20Gamer%20Sem%20Fio%20Xiaomi%20Mi%20True%20Wireless%20Earbuds%20Basic%202s%20Twsej07ls%20Preto%22">Comprar</a>
+                        <a class="comprar" target="_blank" rel="noopener" href="https://wa.me/5585989049798?text=Ol%C3%A1!%20Tenho%20interesse%20no%20Produto%20%22Headset%20Gamer%20RGB%20Com%20Fio%20e%20Microfone%22">Comprar</a>
                         <button class="sabermais" onclick="crescercard(this)">Mais</button>
                     </div>
                 </div>
@@ -87,9 +57,9 @@
                 <div class="cardstext">
                     <p class="cardtitulo">JBL - Fone de Ouvido Com Fio Reforçado</p>
                     <p class="cardpreco"> R&#36;25,00</p>
-                    <p class="carddescricao">- Marca: JBL <br> - Modelo: Hands Free <br> - Tipo: Com Fio + Intra Auricular <br> - Design: Compacto e ergonômico <br> - Qualidade de Áudio: Alta Qualidade</p>
+                    <p class="carddescricao">Fone de Ouvido com Fio Reforçado, com graves potentes e áudio cristalino. Durável, confortável e compatível com vários dispositivos!</p>
                     <div class="divbotaosaber">    
-                        <a class="comprar" href="https://wa.me/5585989049798?text=Ol%C3%A1!%20Tenho%20interesse%20no%20Produto%20%22JBL%20-%20Fone%20Refor%C3%A7ado%20de%20Ouvido%20Com%20Fio%22">Comprar</a>
+                        <a class="comprar" target="_blank" rel="noopener" href="https://wa.me/5585989049798?text=Ol%C3%A1!%20Tenho%20interesse%20no%20Produto%20%22JBL%20-%20Fone%20Refor%C3%A7ado%20de%20Ouvido%20Com%20Fio%22">Comprar</a>
                         <button class="sabermais" onclick="crescercard(this)">Mais</button>
                     </div>
                 </div>
