--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
 <main>
     
+    <div class="fundo"></div>
+    <div class="camadaescura"></div>
+
     <section class="destaque">
         <h1>Bem-vindo à Vyrexis</h1>
         <p>"Tecnologia útil e acessível no seu dia a dia"</p>
@@ -52,7 +55,7 @@
 </div>
      <div class="logos">
         <div class="redessociais">
-            <a href="https://www.instagram.com/vyrexis.store/" class="footer-link" target="_blank" rel="noopener" color: rgb(226, 43, 104);">
+            <a href="https://www.instagram.com/vyrexis.store/" class="footer-link" target="_blank" rel="noopener" style="color: rgb(226, 43, 104);">
                 <i class="fa-brands fa-instagram"></i>
             </a>
             <a href="https://www.tiktok.com/@vyrexisstore" class="footer-link" target="_blank" rel="noopener" style="color: rgb(236, 217, 217);">
