--- a/sobre.html
+++ b/sobre.html
@@ -25,9 +25,12 @@
 
 <main>
     
+    <div class="fundo"></div>
+    <div class="camadaescura"></div>
+
     <section class="sobre-nos">
         <h1>Sobre a Vyrexis</h1>
-        <p>A Vyrexis nasceu da vontade de criar um espaço onde segurança, rapidez e autenticidade se encontram. Nossa missão é oferecer produtos variados e únicos e um toque pessoal, promovendo uma experiência de compra única para cada cliente.</p>
+        <p>A Vyrexis nasceu da vontade de criar um espaço onde segurança, rapidez e autenticidade se encontram. Nossa missão é <br>oferecer produtos variados e únicos e um toque pessoal, promovendo uma experiência de compra única para cada cliente.</p>
         <img src="logotipo.png" alt="Nossa equipe" class="img-sobre">
     </section>
 
@@ -46,12 +49,11 @@
 </div>
      <div class="logos">
         <div class="redessociais">
-            <a href="https://www.instagram.com/vyrexis.store/" class="footer-link" target="_blank" rel="noopener" color: rgb(226, 43, 104);">
+            <a href="https://www.instagram.com/vyrexis.store/" class="footer-link" target="_blank" rel="noopener" style="color: rgb(226, 43, 104);">
                 <i class="fa-brands fa-instagram"></i>
             </a>
             <a href="https://www.tiktok.com/@vyrexisstore" class="footer-link" target="_blank" rel="noopener" style="color: rgb(236, 217, 217);">
                 <i class="fa-brands fa-tiktok"></i>
-            </a>
             </a>
             <a href="https://t.me/+WlpzVnrU9hxkNzcx" class="footer-link" target="_blank" rel="noopener" style="color: rgb(16, 167, 197);">
                 <i class="fa-brands fa-telegram"></i>
