Adição da Aba de Promoções

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <div class="divdosbotoes">
                 <a class="a1" style="color: rgb(236, 198, 128);" href="index.html" lang="en">Home</a>
                 <a class="a1" href="produtos.html">Produtos</a>
+                <a class="a1" href="promocoes.html">Promoções</a>
             </div>
     </header>
 
