--- a/sobre.html
+++ b/sobre.html
@@ -20,6 +20,7 @@
         <nav class="navegacao">
             <a class="a1" href="index.html" lang="en">Home</a>
             <a class="a1" href="produtos.html">Produtos</a>
+            <a class="a1" href="promocoes.html">Promoções</a>
         </nav>
     </header>
 
