--- a/promocoes.html
+++ b/promocoes.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="produto.css">
+    <link rel="stylesheet" href="promocoes.css">
     <script src="func.js"></script>
-    <title>Vyrexis - Produtos</title>
+    <title>Vyrexis - Promoções</title>
     <link rel="shortcut icon" href="IconeVyrexisSemFundo.ico" type="image/x-icon">
 </head>
 <body>
@@ -25,8 +25,8 @@
         </div>
         <div class="divdosbotoes">
             <a class="a1" href="index.html" lang="en">Home</a>
-            <a class="a1" href="produtos.html" style="color: rgb(236, 198, 128)">Produtos</a>
-            <a class="a1" href="promocoes.html">Promoções</a>
+            <a class="a1" href="produtos.html">Produtos</a>
+            <a class="a1" href="promocoes.html" style="color: rgb(236, 198, 128)">Promoções</a>
         </div>
     </header>
 
